--- a/DesktopApp/packages.config
+++ b/DesktopApp/packages.config
@@ -5,4 +5,5 @@
   <package id="AForge.Math" version="2.2.5" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
 </packages>
