--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -104,25 +104,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drawing.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Pocos\BitmapData.cs" />
+    <Compile Include="Processors\Drawing.cs" />
+    <Compile Include="Filters\ImageFilter.cs" />
+    <Compile Include="Forms\Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="GlobalKeyHook.cs" />
-    <Compile Include="Image.cs" />
+    <Compile Include="KeyHooks\GlobalKeyHook.cs" />
+    <Compile Include="Pocos\ScreenFocus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScreenForm.cs">
+    <Compile Include="Forms\ScreenGrabber.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ScreenForm.Designer.cs">
-      <DependentUpon>ScreenForm.cs</DependentUpon>
+    <Compile Include="Forms\ScreenGrabber.Designer.cs">
+      <DependentUpon>ScreenGrabber.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -133,8 +135,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ScreenForm.resx">
-      <DependentUpon>ScreenForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ScreenGrabber.resx">
+      <DependentUpon>ScreenGrabber.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -156,5 +158,6 @@
       <Name>BackgroundApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
