--- a/BackgroundApp/packages.config
+++ b/BackgroundApp/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AngleSharp" version="0.10.1" targetFramework="net472" />
   <package id="Chromium.ChromeDriver" version="2.37" targetFramework="net472" />
+  <package id="Polly" version="7.0.2" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
 </packages>
