--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -122,6 +122,7 @@
     </Compile>
     <Compile Include="KeyHooks\GlobalKeyHook.cs" />
     <Compile Include="Pocos\Configuration.cs" />
+    <Compile Include="Processors\Translator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\ScreenGrabber.cs">
