--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -104,6 +104,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\ConfigEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ConfigEditor.Designer.cs">
+      <DependentUpon>ConfigEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\DictionaryEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +137,9 @@
     <Compile Include="Forms\ScreenGrabber.Designer.cs">
       <DependentUpon>ScreenGrabber.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\ConfigEditor.resx">
+      <DependentUpon>ConfigEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\DictionaryEditor.resx">
       <DependentUpon>DictionaryEditor.cs</DependentUpon>
     </EmbeddedResource>
