--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -116,6 +116,12 @@
     <Compile Include="Forms\DictionaryEditor.Designer.cs">
       <DependentUpon>DictionaryEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Output.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Output.Designer.cs">
+      <DependentUpon>Output.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pocos\BitmapData.cs" />
     <Compile Include="Processors\Dictionary.cs" />
     <Compile Include="Processors\Drawing.cs" />
@@ -145,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Output.resx">
+      <DependentUpon>Output.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
